[130352] externalize strings for connection management plug-ins

--- a/plugins/org.eclipse.datatools.connectivity.ui.dse/plugin.xml
+++ b/plugins/org.eclipse.datatools.connectivity.ui.dse/plugin.xml
@@ -12,7 +12,7 @@
       </view>
       <category
             id="org.eclipse.datatools"
-            name="Data Tools"/>
+            name="%category.name.dataTools"/>
    </extension>
    <extension
          point="org.eclipse.ui.viewActions">
