--- a/plugins/org.eclipse.datatools.connectivity.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.ui/plugin.properties
@@ -19,3 +19,4 @@ Extension.NewWizard.Name = Connection Profile
 Extension.NewWizard.Description = Create a connection profile
 datatools.preference.page.name=Data Tools
 drivers.preference.page.name = Driver Definitions
+category.name.connectionProfiles = Connection Profiles
