--- a/plugins/org.eclipse.datatools.connectivity/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity/plugin.properties
@@ -10,3 +10,6 @@
 ################################################################################ 
 Plugin.Name = Data Tools Connectivity Plug-in
 Plugin.ProviderName = Eclipse.org
+
+extension-point.name.connectionProfile = Connection Profile Extension
+extension-point.name.driverExtension = driverExtension
