--- a/plugins/org.eclipse.datatools.connectivity/src/org/eclipse/datatools/connectivity/internal/resources.properties
+++ b/plugins/org.eclipse.datatools.connectivity/src/org/eclipse/datatools/connectivity/internal/resources.properties
@@ -31,3 +31,6 @@ marker.error = Problem connecting to profile {0}.  (Error\: {1})
 profile.duplicate = Duplicate connection profile name "{0}"!
 profile.notexist = Connection profile "{0}" does not exist!
 duplicate.profile.name = Copy of {0}({1})
+DriverConnectionBase.error.unknown=Connection failed with unspecified error.
+DriverConnectionBase.error.driverDefinitionNotSpecified=Driver definition not specified.
+DriverConnectionBase.error.driverDefinitionNotFound=Driver definition could not be found.
