[130356] externalize strings for generic db connection profile plug-ins

--- a/plugins/org.eclipse.datatools.connectivity.db.generic.ui/plugin.xml
+++ b/plugins/org.eclipse.datatools.connectivity.db.generic.ui/plugin.xml
@@ -15,7 +15,7 @@
       <page
             class="org.eclipse.datatools.connectivity.db.generic.ui.GenericDBProfilePropertyPage"
             id="org.eclipse.datatools.connectivity.db.generic.profileProperties"
-            name="JDBC Connection Properties"
+            name="%page.name.jdbcConnectionProperties"
             objectClass="org.eclipse.datatools.connectivity.IConnectionProfile">
          <filter
                name="org.eclipse.datatools.profile.property.id"
