[130648] Update provider names

--- a/plugins/org.eclipse.datatools.modelbase.sql.query/plugin.properties
+++ b/plugins/org.eclipse.datatools.modelbase.sql.query/plugin.properties
@@ -2,7 +2,7 @@
 # ====================================================================
 
 # ====================================================================
-# $Id: plugin.properties,v 1.1 2005/12/16 13:11:15 bpayton Exp $
+# $Id: plugin.properties,v 1.2 2005/12/17 01:46:21 bpayton Exp $
 # @generated NOT
 # ====================================================================
 
@@ -20,5 +20,5 @@
 
 pluginName = SQL Query Model Plugin
 nl1PluginName = SQL Query Model Nl1 Fragment
-providerName = IBM
+providerName = Eclipse.org
 
