*** empty log message ***

--- a/plugins/org.eclipse.datatools.modelbase.sql.xml.query/plugin.properties
+++ b/plugins/org.eclipse.datatools.modelbase.sql.xml.query/plugin.properties
@@ -2,7 +2,7 @@
 # ====================================================================
 
 # ====================================================================
-# $Id: plugin.properties,v 1.1 2005/12/16 13:16:53 bpayton Exp $
+# $Id: plugin.properties,v 1.2 2005/12/17 01:52:31 bpayton Exp $
 # @generated NOT
 # ====================================================================
 
@@ -20,4 +20,4 @@
 
 pluginName = SQL XML Query Model Plugin
 nl1PluginName = SQL XML Query Model Nl1 Fragment
-providerName = IBM
+providerName = Eclipse.org
