[130648] Update provider names

--- a/plugins/org.eclipse.datatools.sqltools.parsers.sql.query/plugin.properties
+++ b/plugins/org.eclipse.datatools.sqltools.parsers.sql.query/plugin.properties
@@ -12,4 +12,4 @@
 !-- plugin.xml 
 pluginName = SQL Query Parser Plugin
 nl1PluginName 	= SQL Query Parser Nl1 Fragment
-providerName = IBM
+providerName = Eclipse.org
