--- a/plugins/org.eclipse.datatools.sqltools.parsers.sql/plugin.properties
+++ b/plugins/org.eclipse.datatools.sqltools.parsers.sql/plugin.properties
@@ -3,4 +3,4 @@
 !-- plugin.xml 
 pluginName = SQL Parser Plugin
 nl1PluginName = SQL Parser Nl1 Fragment
-providerName = IBM
+providerName = Eclipse.org
