[130668] fix pii errors in properties file

--- a/plugins/org.eclipse.datatools.connectivity.ui/src/org/eclipse/datatools/connectivity/internal/ui/resources.properties
+++ b/plugins/org.eclipse.datatools.connectivity.ui/src/org/eclipse/datatools/connectivity/internal/ui/resources.properties
@@ -69,7 +69,7 @@ NewConnectionProfileWizardPage.Button.AutoConnect1 = Auto-connect when Enterpris
 NewConnectionProfileWizardPage.summary_autoconnect = Auto connect
 ConnectionProfileDetailsPage.Button.TestConnection = Test Connection
 ConnectionProfileDetailsPage.AskConfirmation = Confirm Dialog
-ConnectionProfileDetailsPage.AskReconnect = This connection profile''s connection information has been changed, do you want to reconnect the server?
+ConnectionProfileDetailsPage.AskReconnect = This connection profile\'s connection information has been changed, do you want to reconnect the server?
 SummaryWizardPage.title = Summary
 SummaryWizardPage.description = Information gathered from previous pages.
 SummaryWizardPage.property = Property
