--- a/plugins/org.eclipse.datatools.connectivity.oda.design/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.design/plugin.properties
@@ -1,19 +1,18 @@
-/**
- *************************************************************************
- * Copyright (c) 2005, 2006 Actuate Corporation.
- * All rights reserved. This program and the accompanying materials
- * are made available under the terms of the Eclipse Public License v1.0
- * which accompanies this distribution, and is available at
- * http://www.eclipse.org/legal/epl-v10.html
- *
- * Contributors:
- *  Actuate Corporation  - initial API and implementation
- *  
- *************************************************************************
- *
- * $Id: plugin.properties,v 1.1 2005/12/29 04:17:56 lchan Exp $
- */
-
+# ====================================================================
+# * Copyright (c) 2005, 2006 Actuate Corporation.
+# * All rights reserved. This program and the accompanying materials
+# * are made available under the terms of the Eclipse Public License v1.0
+# * which accompanies this distribution, and is available at
+# * http://www.eclipse.org/legal/epl-v10.html
+# *
+# * Contributors:
+# *  Actuate Corporation - initial API and implementation
+# *  
+# *************************************************************************
+# *
+# * $Id: plugin.properties,v 1.2 2006/02/04 10:30:26 lchan Exp $
+# ====================================================================
+#
 # ====================================================================
 # To code developer:
 #   Do NOT change the properties between this line and the
@@ -21,10 +20,9 @@
 #   Make a new property name, append to the end of the file and change
 #   the code to use the new property.
 # ====================================================================
-
+#
 # ====================================================================
 # %%% END OF TRANSLATED PROPERTIES %%%
 # ====================================================================
-
-pluginName = DTP ODA Design Session Model
-
+#
+pluginName=DTP ODA Design Session Model
