[130351]  Externalize Translatable Strings

--- a/plugins/org.eclipse.datatools.connectivity.sqm.core.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.sqm.core.ui/plugin.properties
@@ -12,6 +12,13 @@ pluginName=Core UI plugin
 providerName=Eclipse.org
 
 #
+## Extension Point Names
+#
+LABEL_SERVICE_EXTENSION_POINT_NAME=labelService
+ELEMENT_ID_EXTENSION_POINT_NAME=elementID
+MARKER_NAVIGATION_PROVIDER_EXTENSION_POINT_NAME=markerNavigationProvider
+
+#
 ## Model Explorer Selection
 #
 datatools.core.ui.modelExplorerSelection = Model Explorer Selection
@@ -153,3 +160,8 @@ existingConnection = Connections Folder
 connectedConnection = Live Connection
 disconnectedConnection = Disconnected Connection
 cachedConnection = Cached Connection
+
+DEFAULT_SCHEMA_FILTER_PROPERTY_PAGE_NAME=Default Schema Filter
+DEFAULT_TABLE_FILTER_PROPERTY_PAGE_NAME=Default Table Filter
+DEFAULT_STORED_PROCEDURE_FILTER_PROPERTY_PAGE_NAME=Default Stored Procedure Filter
+FILTER_SETTINGS_PROPERTY_PAGE_NAME=Filter Settings
