[130351]  Externalize Translatable Strings

--- a/plugins/org.eclipse.datatools.connectivity.sqm.server.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.sqm.server.ui/plugin.properties
@@ -12,6 +12,7 @@ pluginName=Server Explorer plugin
 providerName=Eclipse.org
 serverExplorerLayout=Server Explorer Layout Extension
 serverExplorerInitialization=Server Initialization Provider
+SQL_MODEL_CONTENT_EXTENSION_NAME=SQL Model Content Extension
 
 #
 ## Providers for the Server Explorer
@@ -35,11 +36,9 @@ rdb.server.ui.actions.navigate = Navigate to Target
 ## Menus for the Data
 #
 rdb.server.ui.actions.data = D&ata
-#rdb.server.ui.actions.data.browse = Browse
 rdb.server.ui.actions.samplecontents = &Sample Contents
 rdb.server.ui.actions.fe = &Generate DDL
 rdb.server.ui.actions.refresh = &Refresh
-#rdb.server.ui.actions.show.statistics = Show Statistics
 
 #
 ## Actions
