--- a/plugins/org.eclipse.datatools.connectivity.sqm.server.ui/plugin.xml
+++ b/plugins/org.eclipse.datatools.connectivity.sqm.server.ui/plugin.xml
@@ -3,7 +3,7 @@
 <plugin
    id="org.eclipse.datatools.connectivity.sqm.server.ui"
    name="%pluginName"
-   version="0.7.0.200602241"
+   version="0.7.0.2006003071"
    provider-name="%providerName"
    class="org.eclipse.datatools.connectivity.sqm.server.internal.ui.ServerUIPlugin">
 
@@ -36,7 +36,7 @@
                contentProvider="org.eclipse.datatools.connectivity.sqm.server.internal.ui.explorer.providers.SQLModelContentProviderExtension"
                id="org.eclipse.datatools.connectivity.db.sqlModelContent"
                labelProvider="org.eclipse.datatools.connectivity.sqm.server.internal.ui.explorer.providers.SQLModelLabelProviderExtension"
-               name="SQL Model Content Extension">
+               name="%SQL_MODEL_CONTENT_EXTENSION_NAME">
             <commonSorter
             	id ="org.eclipse.datatools.connectivity.sqm.core.internal.ui.services.ExplorerSorterProvider"
             	class="org.eclipse.datatools.connectivity.sqm.core.internal.ui.services.ExplorerSorterProvider">
@@ -74,5 +74,47 @@
          </viewerContentBinding>
       </extension>  
 
+<!-- Refresh Menu -->
+   <extension
+         point="org.eclipse.ui.popupMenus">
+
+      <objectContribution
+            objectClass="org.eclipse.datatools.connectivity.sqm.core.internal.ui.explorer.virtual.IVirtualNode"
+            id="org.eclipse.datatools.connectivity.sqm.server.ui.explorer.popupMenus">
+         <action
+               label="%rdb.server.ui.actions.refresh"
+               icon="platform:/plugin/org.eclipse.datatools.connectivity.sqm.core.ui/icons/refresh.gif"
+               class="org.eclipse.datatools.connectivity.sqm.server.internal.ui.explorer.actions.popup.RefreshAction"
+               menubarPath="additions"
+               enablesFor="1"
+               id="org.eclipse.datatools.connectivity.sqm.server.ui.explorer.popupMenus.refresh">
+         </action>
+         <visibility>
+            <or>
+               <objectClass
+                     name="org.eclipse.datatools.modelbase.sql.schema.Database">
+               </objectClass>
+               <objectClass
+                     name="org.eclipse.datatools.modelbase.sql.schema.Schema">
+               </objectClass>
+               <objectClass
+                     name="org.eclipse.datatools.modelbase.sql.tables.Table">
+               </objectClass>
+               <objectClass
+                     name="org.eclipse.datatools.modelbase.sql.schema.Sequence">
+               </objectClass>
+               <objectClass
+                     name="org.eclipse.datatools.modelbase.sql.datatypes.UserDefinedType">
+               </objectClass>
+               <objectClass
+                     name="org.eclipse.datatools.modelbase.sql.routines.Procedure">
+               </objectClass>
+               <objectClass
+               		 name="org.eclipse.datatools.connectivity.sqm.core.internal.ui.explorer.virtual.IVirtualNode">
+               </objectClass>
+            </or>
+         </visibility>
+      </objectContribution>
+   </extension>
 
 </plugin>
