--- a/plugins/org.eclipse.datatools.modelbase.derby/plugin.properties
+++ b/plugins/org.eclipse.datatools.modelbase.derby/plugin.properties
@@ -1,7 +1,7 @@
 # <copyright>
 # </copyright>
 #
-# $Id$
+# $Id: plugin.properties,v 1.1 2006/03/07 00:58:26 dpchou Exp $
 
 # ====================================================================
 # To code developer:
@@ -15,6 +15,6 @@
 # %%% END OF TRANSLATED PROPERTIES %%%
 # ====================================================================
 
-pluginName = Derby Model
+pluginName = Derby Model Plug-in
 providerName = Eclipse.org
 
