[130637] Added use of manifest.mf

--- a/plugins/org.eclipse.datatools.connectivity.oda/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda/build.properties
@@ -20,12 +20,13 @@ bin.dir =         		 ./bin/
 jars.compile.order =     oda.jar,\
                          odaconsumer-helper.jar
 jars.extra.classpath =   lib/birt-core.jar
-bin.includes =           about.html,\
-                         plugin.xml,\
-                         oda.jar,\
-                         odaconsumer-helper.jar,\
-                         lib/birt-core.jar,\
-                         schema/datasource.exsd
+bin.includes = about.html,\
+               plugin.xml,\
+               oda.jar,\
+               odaconsumer-helper.jar,\
+               lib/birt-core.jar,\
+               schema/datasource.exsd,\
+               META-INF/
 jar.includes =           **/*.txt,\
                          **/*.xml,\
                          **/*.def,\
