[130637] Temporarily added plugin.version property since its value is moved to manifest.mf

--- a/plugins/org.eclipse.datatools.connectivity.oda/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda/build.properties
@@ -11,6 +11,7 @@
 #  
 #************************************************************************
 #
+plugin.version=3.0.0.200603081
 package.oda.jar =        ./org/eclipse/datatools/connectivity/oda/
 src.dir =            	 ./src/
 oda.src.dir =         	 ./src/org/eclipse/datatools/connectivity/oda/
