[125799] ODA data set design session in the ODA UI design-time framework, for integration with BIRT Data Set wizard and editor.

--- a/plugins/org.eclipse.datatools.connectivity.oda.flatfile.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.flatfile.ui/plugin.properties
@@ -25,6 +25,7 @@ newwizard.description=Create an ODA Flat File connection profile
 wizard.window.title=New Flat File Data Source Profile
 wizard.data.source.page.title=Select Folder
 profile.propertypage.name=ODA Flat File Data Source Connection Properties
+wizard.data.set.page.title=Select Columns
 #
 #  Below NLS messages apply to all ODA data sources; should be re-factored
 #
