--- a/plugins/org.eclipse.datatools.connectivity.db.generic/build.xml
+++ b/plugins/org.eclipse.datatools.connectivity.db.generic/build.xml
@@ -128,7 +128,7 @@
 			<fileset dir="${build.result.folder}" includes="genericdb.jar"/>
 		</copy>
 		<copy todir="${destination.temp.folder}/${module.name}_${plugin.version}" failonerror="true" overwrite="false">
-			<fileset dir="${basedir}" includes="META-INF/,plugin.xml,about.html,genericdb.jar,icons/"/>
+			<fileset dir="${basedir}" includes="META-INF/,plugin.xml,plugin.properties,about.html,genericdb.jar,icons/"/>
 		</copy>
 		<copy todir="${destination.temp.folder}/${module.name}_${plugin.version}" failonerror="false" overwrite="false">
 			<fileset dir="${basedir}" includes="genericdbsrc.zip"/>
