[BZ130808] Fixing issue with SQL model and DSE sorters

--- a/plugins/org.eclipse.datatools.connectivity.ui.dse/plugin.xml
+++ b/plugins/org.eclipse.datatools.connectivity.ui.dse/plugin.xml
@@ -288,6 +288,9 @@
                </or>
             </enablement>
          </actionProvider>
+         <commonSorter
+               class="org.eclipse.datatools.connectivity.ui.dse.views.ConnectionProfileSorter"
+               id="org.eclipse.datatools.connectivity.ui.dse.commonSorter"/>
          <enablement>
             <or>
                <adapt type="org.eclipse.datatools.connectivity.ICategory"/>
