[131203] update build.properties to include missing files from binaries

--- a/plugins/org.eclipse.datatools.connectivity.db.generic.ui/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity.db.generic.ui/build.properties
@@ -2,7 +2,8 @@ bin.includes = META-INF/,\
                plugin.xml,\
                genericdbui.jar,\
                about.html,\
-               icons/
+               icons/,\
+               plugin.properties
 jars.compile.order = genericdbui.jar
 source.genericdbui.jar = src/
 output.genericdbui.jar = bin/
