--- a/plugins/org.eclipse.datatools.connectivity.db.generic/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity.db.generic/build.properties
@@ -2,7 +2,8 @@ bin.includes = META-INF/,\
                plugin.xml,\
                genericdb.jar,\
                icons/,\
-               about.html
+               about.html,\
+               plugin.properties
 jars.compile.order = genericdb.jar
 source.genericdb.jar = src/
 output.genericdb.jar = bin/
