--- a/plugins/org.eclipse.datatools.modelbase.sql.edit/plugin.properties
+++ b/plugins/org.eclipse.datatools.modelbase.sql.edit/plugin.properties
@@ -13,7 +13,7 @@
  * <copyright>
  * </copyright>
  *
- * $Id: plugin.properties,v 1.2 2005/12/22 22:37:41 bpayton Exp $
+ * $Id: plugin.properties,v 1.3 2006/03/03 21:46:47 dpchou Exp $
  */
 
 # ====================================================================
@@ -419,3 +419,8 @@ _UI_Event_condition_feature = Condition
 _UI_Event_action_feature = Action
 _UI_Event_enabled_feature = Enabled
 _UI_Event_Database_feature = Database
+_UI_ForeignKey_referencedTable_feature = Referenced Table
+_UI_Index_systemGenerated_feature = System Generated
+_UI_Parameter_stringTypeOption_feature = String Type Option
+_UI_BaseTable_referencingForeignKeys_feature = Referencing Foreign Keys
+_UI_IntervalQualifierType_FRACTION_literal = FRACTION
