--- a/plugins/org.eclipse.datatools.connectivity.oda.flatfile/plugin.xml
+++ b/plugins/org.eclipse.datatools.connectivity.oda.flatfile/plugin.xml
@@ -1,23 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.0"?>
-<plugin
-   id="org.eclipse.datatools.connectivity.oda.flatfile"
-   name="%plugin.name"
-   version="3.0.0.200602241"
-   provider-name="Eclipse.org"
-   class="org.eclipse.datatools.connectivity.oda.flatfile.plugin.FlatfilePlugin">
-   <runtime>
-      <library name="oda-flatfile.jar">
-         <export name="*"/>
-      </library>
-   </runtime>
-   <requires>
-      <import plugin="org.eclipse.core.runtime"/>
-      <import plugin="org.eclipse.datatools.connectivity.oda"/>
-      <import plugin="org.junit" optional="true"/>
-      <import plugin="com.ibm.icu"/>
-   </requires>
-   
+<!--
+/**
+ *************************************************************************
+ * Copyright (c) 2004, 2006 Actuate Corporation.
+ * All rights reserved. This program and the accompanying materials
+ * are made available under the terms of the Eclipse Public License v1.0
+ * which accompanies this distribution, and is available at
+ * http://www.eclipse.org/legal/epl-v10.html
+ *
+ * Contributors:
+ *  Actuate Corporation - initial API and implementation
+ *  
+ *************************************************************************
+ *
+ * $Id: $
+ */
+-->
+
+<plugin>
    <extension
          point="org.eclipse.datatools.connectivity.oda.dataSource">
       <dataSource
