--- a/plugins/org.eclipse.datatools.connectivity.oda.flatfile.ui/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.flatfile.ui/build.properties
@@ -1,7 +1,23 @@
+<!--
+/**
+ *************************************************************************
+ * Copyright (c) 2006 Actuate Corporation.
+ * All rights reserved. This program and the accompanying materials
+ * are made available under the terms of the Eclipse Public License v1.0
+ * which accompanies this distribution, and is available at
+ * http://www.eclipse.org/legal/epl-v10.html
+ *
+ * Contributors:
+ *  Actuate Corporation - initial API and implementation
+ *  
+ *************************************************************************
+ */
+-->
 source.oda-flatfileui.jar = src/
 output.oda-flatfileui.jar = bin/
 bin.includes = plugin.xml,\
                oda-flatfileui.jar,\
                about.html,\
                plugin*.properties,\
-               icons/
+               icons/,\
+               META-INF/
