--- a/plugins/org.eclipse.datatools.connectivity.oda.flatfile.ui/plugin.xml
+++ b/plugins/org.eclipse.datatools.connectivity.oda.flatfile.ui/plugin.xml
@@ -1,23 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.0"?>
-<plugin
-   id="org.eclipse.datatools.connectivity.oda.flatfile.ui"
-   name="%plugin.name"
-   version="3.0.0.200603091"
-   provider-name="Eclipse.org"
-   class="org.eclipse.datatools.connectivity.oda.flatfile.ui.FlatFileUIPlugin">
+<!--
+/**
+ *************************************************************************
+ * Copyright (c) 2006 Actuate Corporation.
+ * All rights reserved. This program and the accompanying materials
+ * are made available under the terms of the Eclipse Public License v1.0
+ * which accompanies this distribution, and is available at
+ * http://www.eclipse.org/legal/epl-v10.html
+ *
+ * Contributors:
+ *  Actuate Corporation - initial API and implementation
+ *  
+ *************************************************************************
+ *
+ * $Id: $
+ */
+-->
 
-   <runtime>
-      <library name="oda-flatfileui.jar">
-         <export name="*"/>
-      </library>
-   </runtime>
-   <requires>
-      <import plugin="org.eclipse.core.runtime"/>
-      <import plugin="org.eclipse.ui"/>
-      <import plugin="org.eclipse.datatools.connectivity.oda.design.ui"/>
-      <import plugin="org.eclipse.datatools.connectivity.oda.flatfile"/>
-   </requires>
+<plugin>
 
    <extension
          point="org.eclipse.datatools.connectivity.connectionProfile">
