[130637] Switched to use OSGi manifest.mf

--- a/plugins/org.eclipse.datatools.connectivity.oda.flatfile/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.flatfile/build.properties
@@ -1,9 +1,7 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<?eclipse version="3.0"?>
 <!--
 /**
  *************************************************************************
- * Copyright (c) 2006 Actuate Corporation.
+ * Copyright (c) 2004, 2006 Actuate Corporation.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -13,19 +11,11 @@
  *  Actuate Corporation - initial API and implementation
  *  
  *************************************************************************
- *
- * $Id: $
  */
 -->
-
-<plugin>
-
-   <extension-point id="dataSource" name="Open Data Access Designer UI Extension Point" schema="schema/datasource.exsd"/>
-   <extension
-         point="org.eclipse.datatools.connectivity.connectionProfile">
-      <category
-            id="%oda.parent.category.id"
-            name="%oda.parent.category.name"/>
-   </extension>
-
-</plugin>
+bin.includes = about.html,\
+               plugin.xml,\
+               META-INF/,\
+               oda-flatfile.jar,\
+               plugin*.properties
+custom = true
