--- a/plugins/org.eclipse.datatools.connectivity.oda.design.ui/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.design.ui/build.properties
@@ -17,7 +17,8 @@ bin.includes = odadesignui.jar,\
                plugin.xml,\
                plugin*.properties,\
                about.html,\
-               schema/datasource.exsd
+               schema/datasource.exsd,\
+               META-INF/
 package.odadesignui.jar = ./org/eclipse/datatools/connectivity/oda/design/ui/
 src.dir =            	 ./src/
 odadesignui.src.dir =     ./src/org/eclipse/datatools/connectivity/oda/design/ui/
