--- a/plugins/org.eclipse.datatools.connectivity.oda.design/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.design/build.properties
@@ -8,17 +8,18 @@
  * http://www.eclipse.org/legal/epl-v10.html
  *
  * Contributors:
- *  Actuate Corporation  - initial API and implementation
+ *  Actuate Corporation - initial API and implementation
  *  
  *************************************************************************
  *
- * $Id: build.properties,v 1.3 2006/02/23 16:16:52 jgraham Exp $
+ * $Id: build.properties,v 1.4 2006/02/26 08:04:34 lchan Exp $
  */
 -->
 bin.includes = plugin.xml,\
                plugin*.properties,\
                odadesign.jar,\
-               about.html
+               about.html,\
+               META-INF/
 jars.compile.order = odadesign.jar
 package.odadesign.jar = ./org/eclipse/datatools/connectivity/oda/design/
 src.dir =            	 ./src/
