--- a/plugins/org.eclipse.datatools.connectivity.oda.design/plugin.xml
+++ b/plugins/org.eclipse.datatools.connectivity.oda.design/plugin.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.0"?>
-
 <!--
 /**
  *************************************************************************
@@ -11,32 +10,15 @@
  * http://www.eclipse.org/legal/epl-v10.html
  *
  * Contributors:
- *  Actuate Corporation  - initial API and implementation
+ *  Actuate Corporation - initial API and implementation
  *  
  *************************************************************************
  *
- * $Id: plugin.xml,v 1.7 2006/03/07 02:01:18 lchan Exp $
+ * $Id: plugin.xml,v 1.8 2006/03/09 05:09:18 lchan Exp $
  */
 -->
 
-<plugin
-    name = "%pluginName"
-    id = "org.eclipse.datatools.connectivity.oda.design"
-    version = "3.0.0.200603091"
-    provider-name = "Eclipse.org">
-
-  <requires>
-    <import plugin="org.eclipse.core.runtime" />
-    <import plugin="org.eclipse.emf.ecore" export="true"/>
-    <import plugin="org.eclipse.emf.ecore.xmi" export="true"/>
-    <import plugin="com.ibm.icu" export="true"/>
-  </requires>
-
-  <runtime>
-    <library name="odadesign.jar">
-      <export name="*"/>
-    </library>
-  </runtime>
+<plugin>
 
   <extension point="org.eclipse.emf.ecore.generated_package">
     <package 
