--- a/plugins/org.eclipse.datatools.connectivity.oda.profile/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.profile/build.properties
@@ -1,9 +1,25 @@
+<!--
+/**
+ *************************************************************************
+ * Copyright (c) 2005, 2006 Actuate Corporation.
+ * All rights reserved. This program and the accompanying materials
+ * are made available under the terms of the Eclipse Public License v1.0
+ * which accompanies this distribution, and is available at
+ * http://www.eclipse.org/legal/epl-v10.html
+ *
+ * Contributors:
+ *  Actuate Corporation - initial API and implementation
+ *  
+ *************************************************************************
+ */
+-->
 source.odaprofile.jar = src/
 output.odaprofile.jar = bin/
 bin.includes = plugin.xml,\
                plugin.properties,\
                odaprofile.jar,\
-               about.html
+               about.html,\
+               META-INF/
 package.odaprofile.jar = ./org/eclipse/datatools/connectivity/oda/profile/
 src.dir =            	 ./src/
 odaprofile.src.dir =     ./src/org/eclipse/datatools/connectivity/oda/profile/
