Fix 131118, use manifest file

--- a/plugins/org.eclipse.datatools.sqltools.routineeditor/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.routineeditor/build.properties
@@ -3,12 +3,13 @@ output.routineeditor.jar = bin/
 bin.includes = META-INF/,\
                routineeditor.jar,\
                plugin.xml,\
+               plugin.properties,\
                routineeditor.jar,\
                about.html,\
                schema/
 jars.extra.classpath =
 src.dir =		src/
-plugin.version =	0.7.0.200602242
+plugin.version =	0.7.0.200603101
 javadoc.dir =		doc/api/
 download.dir =		./download/
 javac.source =		1.4
