--- a/plugins/org.eclipse.datatools.sqltools.sqleditor/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqleditor/build.properties
@@ -6,11 +6,12 @@ bin.includes = sqleditor.jar,\
                icons/,\
                plugin.xml,\
                plugin.properties,\
-               about.html
+               about.html,\
+               META-INF/
                
 jars.extra.classpath =
 src.dir =		src/
-plugin.version =	0.7.0.200602242
+plugin.version =	0.7.0.200603101
 javadoc.dir =		doc/api/
 download.dir =		./download/
 javac.source =		1.4
