--- a/plugins/org.eclipse.datatools.sqltools.sqlscrapbook/build.xml
+++ b/plugins/org.eclipse.datatools.sqltools.sqlscrapbook/build.xml
@@ -197,7 +197,7 @@
 			<fileset dir="${build.result.folder}" includes="sqlscrapbook.jar"			/>
 		</copy>
 		<copy todir="${destination.temp.folder}/${module.name}_${plugin.version}" failonerror="true" overwrite="false">
-			<fileset dir="${basedir}" includes="plugin.xml,sqlscrapbook.jar,plugin.properties,images/,about.html"			/>
+			<fileset dir="${basedir}" includes="META-INF/,plugin.xml,sqlscrapbook.jar,plugin.properties,images/,about.html"			/>
 		</copy>
 		<copy todir="${destination.temp.folder}/${module.name}_${plugin.version}" failonerror="false" overwrite="false">
 			<fileset dir="${basedir}" includes="sqlscrapbooksrc.zip"/>
