--- a/plugins/org.eclipse.datatools.sqltools.sqleditor/plugin.xml
+++ b/plugins/org.eclipse.datatools.sqltools.sqleditor/plugin.xml
@@ -1,44 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.0"?>
-<plugin
-   id="org.eclipse.datatools.sqltools.sqleditor"
-   name="Eclipse Data Tools Platform SQL Editor"
-   version="0.7.0.200602242"
-   provider-name="Eclipse.org"
-   class="org.eclipse.datatools.sqltools.sqleditor.internal.SQLEditorPlugin">
+<plugin>
 
    <extension-point id="texthover" name="SQL Editor Text Hover" schema="schema/texthover.exsd"/>
 
-   <runtime>
-      <library name="sqleditor.jar">
-         <export name="*"/>
-      </library>
-   </runtime>
-
-   <requires>
-      <!-- Eclipse Platform and Workbench plugins -->
-      <import plugin="org.eclipse.core.resources"/>
-      <import plugin="org.eclipse.core.runtime"/>
-      <import plugin="org.eclipse.jface.text" export="true"/>
-      <import plugin="org.eclipse.ui"/>
-      <import plugin="org.eclipse.ui.editors" export="true"/>
-      <import plugin="org.eclipse.ui.ide"/>
-      <import plugin="org.eclipse.ui.views" export="true"/>
-      <import plugin="org.eclipse.ui.workbench.texteditor" export="true"/>
-      
-      <!-- Eclipse Web Tools Project plugins -->
-      <import plugin="org.eclipse.datatools.modelbase.sql"/>
-      <import plugin="org.eclipse.datatools.connectivity"/>
-      <import plugin="org.eclipse.datatools.modelbase.dbdefinition"/>
-      <import plugin="org.eclipse.datatools.sqltools.editor.core"/>
-      <import plugin="org.eclipse.datatools.sqltools.sql"/>
-      <import plugin="org.eclipse.datatools.sqltools.result" export="true"/>
-      <import plugin="org.eclipse.debug.core"/>
-      <import plugin="org.eclipse.debug.ui"/>
-      <import plugin="com.ibm.icu"/>
-   </requires>
-
-   <!-- Register the SQL Editor and the Action Contributor class for the SQL Editor. -->
+     <!-- Register the SQL Editor and the Action Contributor class for the SQL Editor. -->
    <extension
          point="org.eclipse.ui.editors">
       <editor
