--- a/plugins/org.eclipse.datatools.sqltools.sqlscrapbook/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqlscrapbook/build.properties
@@ -5,11 +5,12 @@ bin.includes = plugin.xml,\
                sqlscrapbook.jar,\
                plugin.properties,\
                images/,\
-               about.html
+               about.html,\
+               META-INF/
 
 jars.extra.classpath =
 src.dir =		src/
-plugin.version =	0.7.0.200602242
+plugin.version =	0.7.0.200603101
 javadoc.dir =		doc/api/
 download.dir =		./download/
 javac.source =		1.4
