[131403]  SQM-related connectivity plug-ins should be converted to manifest files

--- a/plugins/org.eclipse.datatools.connectivity.dbdefinition.genericJDBC/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity.dbdefinition.genericJDBC/build.properties
@@ -11,7 +11,8 @@
 bin.includes = runtime/,\
                plugin.xml,\
                plugin.properties,\
-               about.html
+               about.html,\
+               META-INF/
 jars.extra.classpath =
 src.dir	= src/
 plugin.version =	0.7.0.200602241
