--- a/plugins/org.eclipse.datatools.connectivity.sqm.core.ui/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity.sqm.core.ui/build.properties
@@ -14,7 +14,8 @@ bin.includes = plugin.xml,\
                plugin.properties,\
                icons/,\
                .options,\
-               about.html
+               about.html,\
+               META-INF/
 source.rdb.core.ui.jar = src/
 
 jars.extra.classpath =
