--- a/plugins/org.eclipse.datatools.connectivity.sqm.server.ui/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity.sqm.server.ui/build.properties
@@ -13,7 +13,8 @@ bin.includes = plugin.xml,\
                icons/,\
                plugin.properties,\
                rdb.server.ui.jar,\
-               about.html
+               about.html,\
+               META-INF/
 source.rdb.server.ui.jar = src/
 jars.compile.order = rdb.server.ui.jar
 
