--- a/plugins/org.eclipse.datatools.connectivity.sqm.server.ui/plugin.xml
+++ b/plugins/org.eclipse.datatools.connectivity.sqm.server.ui/plugin.xml
@@ -1,36 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.0"?>
-<plugin
-   id="org.eclipse.datatools.connectivity.sqm.server.ui"
-   name="%pluginName"
-   version="0.7.0.2006003081"
-   provider-name="%providerName"
-   class="org.eclipse.datatools.connectivity.sqm.server.internal.ui.ServerUIPlugin">
+<plugin>
 
-   <runtime>
-      <library name="rdb.server.ui.jar">
-         <export name="*"/>
-      </library>
-   </runtime>
-   <requires>
-<!-- Eclipse dependencies -->
-      <import plugin="org.eclipse.core.runtime"/>
-      <import plugin="org.eclipse.core.resources"/>
-      <import plugin="org.eclipse.ui.ide"/>
-      <import plugin="org.eclipse.ui"/>
-      
-<!-- RDB Dependencies -->
-	  <import plugin="org.eclipse.datatools.modelbase.sql"/>
-      <import plugin="org.eclipse.datatools.connectivity.sqm.core"/>
-      <import plugin="org.eclipse.datatools.connectivity.sqm.core.ui"/>
-      <import plugin="org.eclipse.datatools.modelbase.dbdefinition"/>
-      <import plugin="org.eclipse.datatools.connectivity"/>
-      <import plugin="org.eclipse.datatools.connectivity.ui"/>
-      <import plugin="org.eclipse.ui.navigator"/>
-      <import plugin="com.ibm.icu"/>
-   </requires>
-
-      <extension
+     <extension
             point="org.eclipse.ui.navigator.navigatorContent">
          <navigatorContent
                contentProvider="org.eclipse.datatools.connectivity.sqm.server.internal.ui.explorer.providers.SQLModelContentProviderExtension"
