--- a/plugins/org.eclipse.datatools.connectivity.dbdefinition.genericJDBC/plugin.xml
+++ b/plugins/org.eclipse.datatools.connectivity.dbdefinition.genericJDBC/plugin.xml
@@ -1,10 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.0"?>
-<plugin
-   id="org.eclipse.datatools.connectivity.dbdefinition.mysql"
-   name="%pluginName"
-   version="0.7.0.200602241"
-   provider-name="%providerName">
+<plugin>
    
    <extension
          point="org.eclipse.datatools.connectivity.sqm.core.databaseDefinition">
