--- a/plugins/org.eclipse.datatools.connectivity.sqm.core.ui/plugin.xml
+++ b/plugins/org.eclipse.datatools.connectivity.sqm.core.ui/plugin.xml
@@ -1,33 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.0"?>
-<plugin
-   id="org.eclipse.datatools.connectivity.sqm.core.ui"
-   name="%pluginName"
-   version="0.7.0.200603071"
-   provider-name="%providerName"
-   class="org.eclipse.datatools.connectivity.sqm.core.internal.ui.RDBCoreUIPlugin">
+<plugin>
 
-   <runtime>
-      <library name="rdb.core.ui.jar">
-         <export name="*"/>
-      </library>
-   </runtime>
-
-   <requires>
-   	  <import plugin="org.eclipse.ui"/>
-      <import plugin="org.eclipse.core.runtime"/>
-      <import plugin="org.eclipse.core.resources"/>
-      <import plugin="com.ibm.icu"/>
-      <import plugin="org.eclipse.emf.ecore"/>
-      <import plugin="org.eclipse.emf.ecore.xmi"/>
-      <import plugin="org.eclipse.datatools.modelbase.sql"/>
-      <import plugin="org.eclipse.datatools.modelbase.dbdefinition"/>
-      <import plugin="org.eclipse.datatools.connectivity.sqm.core"/>
-      <import plugin="org.eclipse.datatools.connectivity.ui"/>
-      <import plugin="org.eclipse.datatools.connectivity"/>
-   </requires>
-
-   <extension-point id="labelService" name="%LABEL_SERVICE_EXTENSION_POINT_NAME" schema="schema/labelService.exsd"/>
+     <extension-point id="labelService" name="%LABEL_SERVICE_EXTENSION_POINT_NAME" schema="schema/labelService.exsd"/>
    <extension-point id="elementID" name="%ELEMENT_ID_EXTENSION_POINT_NAME" schema="schema/elementID.exsd"/>
    <extension-point id="markerNavigationProvider" name="%MARKER_NAVIGATION_PROVIDER_EXTENSION_POINT_NAME" schema="schema/markerNavigationProvider.exsd"/>
 
