--- a/plugins/org.eclipse.datatools.connectivity.sqm.core/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity.sqm.core/build.properties
@@ -13,7 +13,8 @@ bin.includes = plugin.xml,\
                plugin.properties,\
                schema/,\
                .options,\
-               about.html
+               about.html,\
+               META-INF/
 source.rdbcore.jar = src/
 src.includes = component.xml
 
