--- a/plugins/org.eclipse.datatools.connectivity.sqm.core/plugin.xml
+++ b/plugins/org.eclipse.datatools.connectivity.sqm.core/plugin.xml
@@ -1,29 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.0"?>
-<plugin
-   id="org.eclipse.datatools.connectivity.sqm.core"
-   name="%pluginName"
-   version="0.7.0.200603071"
-   provider-name="%providerName"
-   class="org.eclipse.datatools.connectivity.sqm.internal.core.RDBCorePlugin">
+<plugin>
 
-   <runtime>
-      <library name="rdbcore.jar">
-         <export name="*"/>
-      </library>
-   </runtime>
-   <requires>
-      <import plugin="org.eclipse.core.resources"/>
-      <import plugin="org.eclipse.emf.ecore.xmi"/>
-      <import plugin="org.eclipse.core.runtime"/>
-      <import plugin="org.eclipse.datatools.modelbase.sql"/>
-      <import plugin="org.eclipse.datatools.modelbase.dbdefinition"/>
-      <import plugin="org.eclipse.datatools.connectivity"/>
-      <import plugin="com.ibm.icu"/>
-      <import plugin="org.eclipse.datatools.connectivity.db.generic"/>
-   </requires>
-
-   <extension-point id="databaseDefinition" name="%databaseDefinitionExtensionPointName" schema="schema/databaseDefinition.exsd"/>
+     <extension-point id="databaseDefinition" name="%databaseDefinitionExtensionPointName" schema="schema/databaseDefinition.exsd"/>
    <extension-point id="logicalContainment" name="%logicalContainmentExtensionPointName" schema="schema/logicalContainment.exsd"/>
    <extension-point id="dataModelElementFactory" name="%DataModelElementFactoryExtensionPointName" schema="schema/dataModelElementFactory.exsd"/>
    <extension-point id="databaseReverseEngineering" name="%DatabaseReverseEngineeringExtensionPointName" schema="schema/databaseReverseEngineering.exsd"/>
