[131418] Create manifest file for src plug-in

--- a/plugins/org.eclipse.datatools.modelbase.sql/build.properties
+++ b/plugins/org.eclipse.datatools.modelbase.sql/build.properties
@@ -13,7 +13,8 @@ output.sqlmodel.jar = bin/
 bin.includes = plugin.xml,\
                sqlmodel.jar,\
                plugin.properties,\
-               about.html
+               about.html,\
+               META-INF/
 
 jars.extra.classpath =
 src.dir =		src/
