--- a/plugins/org.eclipse.datatools.modelbase.dbdefinition/build.properties
+++ b/plugins/org.eclipse.datatools.modelbase.dbdefinition/build.properties
@@ -13,13 +13,14 @@
  * <copyright>
  * </copyright>
  *
- * $Id: build.properties,v 1.3 2006/01/10 16:57:00 jgraham Exp $
+ * $Id: build.properties,v 1.4 2006/02/23 16:24:46 jgraham Exp $
  */
 -->
 bin.includes = plugin.xml,\
                plugin.properties,\
                databasedefinition.jar,\
-               about.html
+               about.html,\
+               META-INF/
 source.databasedefinition.jar = src/
 
 jars.extra.classpath =
