--- a/plugins/org.eclipse.datatools.modelbase.sql.edit/build.properties
+++ b/plugins/org.eclipse.datatools.modelbase.sql.edit/build.properties
@@ -3,14 +3,15 @@
  * <copyright>
  * </copyright>
  *
- * $Id: build.properties,v 1.3 2006/01/10 17:00:30 jgraham Exp $
+ * $Id: build.properties,v 1.4 2006/02/23 16:25:53 jgraham Exp $
  */
 -->
 bin.includes = plugin.xml,\
                sqlmodel.edit.jar,\
                plugin.properties,\
                icons/,\
-               about.html
+               about.html,\
+               META-INF/
 jars.compile.order = sqlmodel.edit.jar
 source.sqlmodel.edit.jar = src/
 output.sqlmodel.edit.jar = bin/
