[131450] Use OSGi class loading and plugin extension framework

--- a/plugins/org.eclipse.datatools.connectivity.oda.profile/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.profile/build.properties
@@ -24,7 +24,7 @@ package.odaprofile.jar = ./org/eclipse/datatools/connectivity/oda/profile/
 src.dir =            	 ./src/
 odaprofile.src.dir =     ./src/org/eclipse/datatools/connectivity/oda/profile/
 bin.dir =         		 ./bin/
-jars.extra.classpath =   lib/birt-core.jar
+jars.extra.classpath =   
 jar.includes =           **/*.txt,\
                          **/*.xml,\
                          **/*.def,\
